--- a/wp-content/themes/Seatera/css/gfonts.css
+++ b/wp-content/themes/Seatera/css/gfonts.css
@@ -1,1 +1,1 @@
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700|Lato:100,300,400,700&subset=cyrillic,greek,latin');
+@import url('http://fonts.googleapis.com/css?family=Lato:100,300,400,700&subset=cyrillic,greek,latin');
