--- a/wp-content/themes/Seatera/style.css
+++ b/wp-content/themes/Seatera/style.css
@@ -1841,7 +1841,7 @@ body .wrapper .spotlight_trailer a.icon-play-1:before {
 .vh_loading_effect:before,
 .vh_row_loading_effect:before,
 .pp_loaderIcon:before {
-	background: #03037a;
+	background: #c50505;
 	-webkit-transform: translateX(20px);
 	transform: translateX(20px);
 	-webkit-animation: moveLeft 0.6s linear infinite alternate;
@@ -1851,7 +1851,7 @@ body .wrapper .spotlight_trailer a.icon-play-1:before {
 .vh_loading_effect:after,
 .vh_row_loading_effect:after,
 .pp_loaderIcon:after {
-	background: #ffffff;
+	background: #fdcc32;
 	-webkit-transform: translateX(-20px);
 	transform: translateX(-20px);
 	-webkit-animation: moveRight 0.6s linear infinite alternate;
@@ -2127,7 +2127,7 @@ body .wrapper .spotlight_trailer a.icon-play-1:before {
 	width: 16px;
 	height: 16px;
 	border-radius: 50%;
-	background: #03037a;
+	background: #c50505;
 	-webkit-transform: translateX(-50%);
 	transform: translateX(-50%);
 }
